--- a/contact.html
+++ b/contact.html
@@ -32,29 +32,51 @@
         </div>
     </nav>
     <!--Hero Section-->
-    <section id="slider">
-        <!--Flex Container-->
-        <div class="container flex flex-col-reverse md:flex-row items-center px-6 mx-auto mt-10 space-y-0 md:space-y-0">
-            <!--Left Item-->
-            <div class="flex flex-col  space-y-5">
-                <h1 class="max-w-xl text-xl front-bold text-center  text-blue-400">Scalable and Secured Platform for
-                    Retail & Wholesale SMS Business</h1>
+    <section id="slider" class="pb-20">
+        <div class="relative">
+            <ul id="slider">
+                <li class="h-[50vh] relative">
+                    <img class="h-full w-full object-cover" src="img/slider-image-1-1920x700.jpg" alt="slider">
+                    <div class="absolute top-0 left-0 h-full w-full flex">
+                        <h2 class="text-4xl font-bold text-white my-auto w-full text-center">Contact Us Here</h2>
+                    </div>
+                </li>
+                <li class="h-[50vh] hidden relative">
+                    <img class="h-full w-full object-cover" src="img/slider-image-2-1920x700.jpg" alt="slider">
+                    <div class="absolute top-0 left-0 h-full w-full flex">
+                        <h2 class="text-4xl font-bold text-white my-auto w-full text-center">Contact Us Here</h2>
+                    </div>
+                </li>
+                <li class="h-[50vh] hidden relative">
+                    <img class="h-full w-full object-cover" src="img/slider-image-3-1920x700.jpg" alt="slider">
+                    <div class="absolute top-0 left-0 h-full w-full flex">
+                        <h2 class="text-4xl font-bold text-white my-auto w-full text-center">Contact Us Here</h2>
+                    </div>
+                </li>
+            </ul>
+            <div class="absolute px-5 h-full w-full flex top-0 left-0">
+                <div class="my-auto  w-full flex justify-between">
+                    <button class="bg-white p-3 rounded-full bg-opacity-80 shadow-lg">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
+                        </svg>
+                    </button>
+                    <button class="bg-white p-3 rounded-full bg-opacity-80 shadow-lg">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                        </svg>
 
-                <P class="max-w-sm text-center">
-                    Client Management, Client Management, Campaign Management
-                </P>
-                <div class="flex justify-center">
-
-                    <a href="" class=" p-3 px-6 pt-2 text-white bg-blue-400 rounded-full baseline hover:bg-blue-500">Get
-                        Free Demo</a>
+                    </button>
                 </div>
-            </div>
-            <!--Image-->
-            <div class="md:w-1/2">
-                <img src="img/illustration-intro.svg" alt="image" />
+
+
             </div>
         </div>
+
     </section>
+    <script src="./main.js"></script>
     <!--Contact info-->
     <section id="service" class="">
         <div class="max-w-6xl px-5 mx-auto mt-30 text-center">
