--- a/aboutus.html
+++ b/aboutus.html
@@ -44,81 +44,20 @@
         </div>
     </nav>
     
-    <section id="service" class="service-bg bg-myGreen-100 mt-14 pb-10">
-        <div class=" px-5 mx-auto text-center max-w-[85rem] lg:max-w-[70rem] md:max-w-[58rem] sm:max-w-[40rem] xs:max-w-[18rem]">
-            <h2 class="text-4xl font-semibold text-center pt-10 pb-10">Our<span class="font-semibold animate-text">Teams</span> </h2>
-            <!--service Container-->
-            <div class="grid grid-cols-3 gap-5 mb-5 md:grid-cols-3 sm:grid-cols-2 xs:grid-cols-1">
-                <!--Services 1-->
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user1.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
-                </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user2.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
-                </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user3.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
-                </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user1.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
-                </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user2.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
-                </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user3.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
-                </div>
-            </div>
+    <!--About us-->
+<section id="aboutus">
+    <div class="max-w-[85rem] lg:max-w-[70rem] md:max-w-[58rem] sm:max-w-[40rem] xs:max-w-[18rem] pb-10">
+        <h2 class="text-center text-4xl front-bold pt-10 pb-5 xs:justify-center xs:text-xl">About Us</h2>
+        <div class=" pl-10 xs:text-xs text-justify">
+            <p>Company started in 2003 with a focused approach to serve the IP-based communication industry. A Telecommunication & Software Solution provider, REVE Systems has a wide assortment of products, ranging from backbone infrastructure to peripheral products, including middleware. The company today holds a leadership position in Carrier Grade Class 4 and Class 5 Softswitch, Mobile OTT Solution, SMS Platform and Cloud Telephony along with Enterprise Communication Platform.</p>
+            <br>
+            <p>REVE Systems ensures the best returns on technology investments and strengthens the service providers' market presence by providing them with best-in-class solutions. A large team of experienced and well-trained engineers helps to provide 24x7 Platinum Level Support to its clients and to ensure that their services are always available to their end customers.</p>        
+            <br>
+            <p>Headquartered in Singapore, REVE Systems has its major development centers in Bangladesh & India with a regional presence in the USA, UK, Russia, Lebanon, and Hong Kong. The company serves customers in over 78 countries, where 4500+ VoIP and telecommunication service providers have placed their trust in it. REVE Systems is RED Herring’s 2012 Top 100 Global Winner and has also received many awards for its Softswitch iTel Switch, which includes the 2012 NGN Leadership Award and 2011 Unified Communication Excellence Award.</p>        
         </div>
-    </section>
+    </div>
+
+</section>
 
     <!--Footer-->
     <footer>
