--- a/mission-vision.html
+++ b/mission-vision.html
@@ -44,81 +44,23 @@
         </div>
     </nav>
     
-    <section id="service" class="service-bg bg-myGreen-100 mt-14 pb-10">
-        <div class=" px-5 mx-auto text-center max-w-[85rem] lg:max-w-[70rem] md:max-w-[58rem] sm:max-w-[40rem] xs:max-w-[18rem]">
-            <h2 class="text-4xl font-semibold text-center pt-10 pb-10">Our<span class="font-semibold animate-text">Teams</span> </h2>
-            <!--service Container-->
-            <div class="grid grid-cols-3 gap-5 mb-5 md:grid-cols-3 sm:grid-cols-2 xs:grid-cols-1">
-                <!--Services 1-->
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user1.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
-                </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user2.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
-                </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user3.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
-                </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user1.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
-                </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user2.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
-                </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user3.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+<!--Mission vision-->
+<section id="mission vision" class="mission-bg bg-myGreen-100">
+    <h2 class="text-center text-4xl front-bold pt-10 xs:text-xl">Mission Vision</h2>
+    <div class="p-8 text-justify">
+        <h2 class=" text-3xl pb-5">What Is a Mission Statement?</h2>
+        <p>A business mission statement is a brief declaration outlining a company’s purpose. This should cover what a company does with regards to their values and open-ended goals.</p>
+        <br>
+        <p>The mission statement is both customer- and employee-facing: Its purpose is to explain the company to prospective clients and provide organizing principles behind which the business’s employees can unite to achieve a common goal. It is a key element to success in any number of procedures that are crucial to a new or growing business, from attracting high-quality executives and keeping employees motivated to securing necessary funding or planning an IPO.</p>
+    </div>
+    <div class="p-8 text-justify">
+        <h2 class=" text-3xl pb-5">What Is a Vision Statement?</h2>
+        <p>A business mission statement is a brief declaration outlining a company’s purpose. This should cover what a company does with regards to their values and open-ended goals.</p>
+        <br>
+        <p>The mission statement is both customer- and employee-facing: Its purpose is to explain the company to prospective clients and provide organizing principles behind which the business’s employees can unite to achieve a common goal. It is a key element to success in any number of procedures that are crucial to a new or growing business, from attracting high-quality executives and keeping employees motivated to securing necessary funding or planning an IPO.</p>
+    </div>
+</section>
+
 
     <!--Footer-->
     <footer>
