--- a/portfolio.html
+++ b/portfolio.html
@@ -43,77 +43,71 @@
             </div>
         </div>
     </nav>
-    
-    <section id="service" class="service-bg bg-myGreen-100 mt-14 pb-10">
-        <div class=" px-5 mx-auto text-center max-w-[85rem] lg:max-w-[70rem] md:max-w-[58rem] sm:max-w-[40rem] xs:max-w-[18rem]">
-            <h2 class="text-4xl font-semibold text-center pt-10 pb-10">Our<span class="font-semibold animate-text">Teams</span> </h2>
-            <!--service Container-->
-            <div class="grid grid-cols-3 gap-5 mb-5 md:grid-cols-3 sm:grid-cols-2 xs:grid-cols-1">
-                <!--Services 1-->
+
+    <section id="service" class="portfolio-bg bg-myGreen-100 mt-14">
+        <div
+            class=" px-5 mx-auto text-center max-w-[85rem] lg:max-w-[70rem] md:max-w-[58rem] sm:max-w-[40rem] xs:max-w-[18rem]">
+            <h2 class="text-4xl font-semibold text-center pt-10 pb-10 md:text-2xl sm:text-xl xs:text-xl">Featuring some
+                of the most amazing products <span class="font-semibold animate-text">we’ve had our tech-savvy hands
+                    in.</span> </h2>
+            <!--Portfolio Container-->
+            <div class="grid grid-cols-3 gap-5 mb-5 md:grid-cols-3 md:gap-8 sm:grid-cols-2 sm:gap-5 xs:grid-cols-1 ">
+                <!--Portfolio-->
                 <div class="rounded-lg bg-gray-200">
                     <div class="h-52 w-full">
-                    <img src="img/user1.jpg" class="w-full h-full rounded-t-lg" alt="team" />
+                        <img src="img/award-1.png" class="w-full h-full rounded-t-lg" alt="portfolio" />
                     </div>
                     <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
+                        <h5
+                            class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white md:text-xl sm:text-base xs:text-base">
+                            Red Herring's</h5>
                     </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
+                    <div class="h-12 w-30 text-sm">
+                        <p clas="mb-3 font-normal text-gray-300 dark:text-gray-400">Secured Communication Platforms for
+                            enterprises for faster real-time business communication & collaboration</p>
+                    </div>
+                    <div class="flex justify-end mb-2 ml-4 pr-2">
+                        <a href="#"
+                            class="font-medium  bg-green-400 text-white rounded-md px-3 py-1 mt-5 sm:font-thin xs:text-base xs:mt-5">Read
+                            more</a>
                     </div>
                 </div>
                 <div class="rounded-lg bg-gray-200">
                     <div class="h-52 w-full">
-                    <img src="img/user2.jpg" class="w-full h-full rounded-t-lg" alt="team" />
+                        <img src="img/award-2.png" class="w-full h-full rounded-t-lg" alt="portfolio" />
                     </div>
                     <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
+                        <h5
+                            class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white md:text-xl sm:text-base xs:text-base">
+                            Unified Communication</h5>
                     </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
+                    <div class="h-12 w-30 text-sm">
+                        <p clas="mb-3 font-normal text-gray-300 dark:text-gray-400">Secured Communication Platforms for
+                            enterprises for faster real-time business communication & collaboration</p>
+                    </div>
+                    <div class="flex justify-end mb-2 ml-4 pr-2">
+                        <a href="#"
+                            class="font-medium  bg-green-400 text-white rounded-md px-3 py-1 mt-5 sm:font-thin xs:text-base xs:mt-5">Read
+                            more</a>
                     </div>
                 </div>
                 <div class="rounded-lg bg-gray-200">
                     <div class="h-52 w-full">
-                    <img src="img/user3.jpg" class="w-full h-full rounded-t-lg" alt="team" />
+                        <img src="img/award-3.png" class="w-full h-full rounded-t-lg" alt="portfolio" />
                     </div>
                     <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
+                        <h5
+                            class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white md:text-xl sm:text-base xs:text-base">
+                            Technology Awards</h5>
                     </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
+                    <div class="h-12 w-30 text-sm">
+                        <p clas="mb-3 font-normal text-gray-300 dark:text-gray-400">Secured Communication Platforms for
+                            enterprises for faster real-time business communication & collaboration</p>
                     </div>
-                </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user1.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
-                </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user2.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
-                </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user3.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
+                    <div class="flex justify-end mb-2 ml-4 pr-2">
+                        <a href="#"
+                            class="font-medium  bg-green-400 text-white rounded-md px-3 py-1 mt-5 sm:font-thin xs:text-base xs:mt-5">Read
+                            more</a>
                     </div>
                 </div>
             </div>
@@ -226,7 +220,6 @@
         </div>
     
     </footer>
-
 </body>
 
 </html>
