--- a/faq.html
+++ b/faq.html
@@ -43,82 +43,121 @@
             </div>
         </div>
     </nav>
-    
-    <section id="service" class="service-bg bg-myGreen-100 mt-14 pb-10">
-        <div class=" px-5 mx-auto text-center max-w-[85rem] lg:max-w-[70rem] md:max-w-[58rem] sm:max-w-[40rem] xs:max-w-[18rem]">
-            <h2 class="text-4xl font-semibold text-center pt-10 pb-10">Our<span class="font-semibold animate-text">Teams</span> </h2>
-            <!--service Container-->
-            <div class="grid grid-cols-3 gap-5 mb-5 md:grid-cols-3 sm:grid-cols-2 xs:grid-cols-1">
-                <!--Services 1-->
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user1.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
+
+    <!--FAQ-->
+
+    <div class="faq-bg bg-myGreen-100 ">
+        <div>
+            <h1 class="text-bold text-center text-3xl pt-10 sm:text-2xl xs:text-xl">Here Are the Fequently Asked
+                Question</h1>
+        </div>
+        <section id="faq"
+            class="mt-10 mx-auto max-w-[85rem] lg:max-w-[70rem] md:max-w-[58rem] sm:max-w-[40rem] xs:max-w-[18rem]">
+            <div class="relative w-[600px] overflow-hidden mx-auto pb-5 ">
+                <input type="checkbox" class="peer absolute top-0 inset-x-0 w-full h-12 opacity-0  z-10 cursor-pointer">
+                <div class="bg-blue-500 h-12 w-full pl-5 flex items-center">
+                    <h1 class="text-lg text-font-bold text-white xs:text-base">Question ?</h1>
                 </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user2.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
+                <div
+                    class="absolute top-3 right-3 text-white transition-transform duration-500 rotate-0 peer-checked:rotate-180">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                    </svg>
                 </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user3.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
-                </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user1.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
-                </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user2.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
-                </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user3.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
+                <div class="bg-gray-200 overflow-hidden transition-all duration-500 max-h-0 peer-checked:max-h-40">
+                    <div class="p-4">
+                        <p>Answer.</p>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+            <div class="relative w-[600px] overflow-hidden mx-auto pb-5 ">
+                <input type="checkbox" class="peer absolute top-0 inset-x-0 w-full h-12 opacity-0  z-10 cursor-pointer">
+                <div class="bg-blue-500 h-12 w-full pl-5 flex items-center">
+                    <h1 class="text-lg text-font-bold text-white xs:text-base">Question ?</h1>
+                </div>
+                <div
+                    class="absolute top-3 right-3 text-white transition-transform duration-500 rotate-0 peer-checked:rotate-180">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                    </svg>
+                </div>
+                <div class="bg-gray-200 overflow-hidden transition-all duration-500 max-h-0 peer-checked:max-h-40">
+                    <div class="p-4">
+                        <p>Answer.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="relative w-[600px] overflow-hidden mx-auto pb-5 ">
+                <input type="checkbox" class="peer absolute top-0 inset-x-0 w-full h-12 opacity-0  z-10 cursor-pointer">
+                <div class="bg-blue-500 h-12 w-full pl-5 flex items-center">
+                    <h1 class="text-lg text-font-bold text-white xs:text-base">Question ?</h1>
+                </div>
+                <div
+                    class="absolute top-3 right-3 text-white transition-transform duration-500 rotate-0 peer-checked:rotate-180">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                    </svg>
+                </div>
+                <div class="bg-gray-200 overflow-hidden transition-all duration-500 max-h-0 peer-checked:max-h-40">
+                    <div class="p-4">
+                        <p>Answer.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="relative w-[600px] overflow-hidden mx-auto pb-5 ">
+                <input type="checkbox" class="peer absolute top-0 inset-x-0 w-full h-12 opacity-0  z-10 cursor-pointer">
+                <div class="bg-blue-500 h-12 w-full pl-5 flex items-center">
+                    <h1 class="text-lg text-font-bold text-white xs:text-base">Question ?</h1>
+                </div>
+                <div
+                    class="absolute top-3 right-3 text-white transition-transform duration-500 rotate-0 peer-checked:rotate-180">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                    </svg>
+                </div>
+                <div class="bg-gray-200 overflow-hidden transition-all duration-500 max-h-0 peer-checked:max-h-40">
+                    <div class="p-4">
+                        <p>Answer.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="relative w-[600px] overflow-hidden mx-auto pb-5 ">
+                <input type="checkbox" class="peer absolute top-0 inset-x-0 w-full h-12 opacity-0  z-10 cursor-pointer">
+                <div class="bg-blue-500 h-12 w-full pl-5 flex items-center">
+                    <h1 class="text-lg text-font-bold text-white xs:text-base">Question ?</h1>
+                </div>
+                <div
+                    class="absolute top-3 right-3 text-white transition-transform duration-500 rotate-0 peer-checked:rotate-180">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                    </svg>
+                </div>
+                <div class="bg-gray-200 overflow-hidden transition-all duration-500 max-h-0 peer-checked:max-h-40">
+                    <div class="p-4">
+                        <p>Answer.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--CTA Section-->
+        <section id="cta" class="bg-blue-900">
+            <div
+                class="container flex flex-col items-center justify-between px-6 py-10 mx-auto space-y-12 max-w-[85rem] lg:max-w-[70rem] md:max-w-[58rem] sm:max-w-[40rem] xs:max-w-[18rem]">
+                <h2 class="text-5xl font-bold leading-tight text-center text-white sm:text-2xl xs:text-xl">We are
+                    available to solve your queries
+                </h2>
+                <a href="#"
+                    class=" p-3 px-6 pt-2 text-blue-700 bg-white rounded-full baseline hover:bg-blue-500">Contact
+                    Us</a>
+            </div>
+        </section>
+    </div>
 
     <!--Footer-->
     <footer>
@@ -226,7 +265,6 @@
         </div>
     
     </footer>
-
 </body>
 
 </html>
