--- a/gallery.html
+++ b/gallery.html
@@ -44,81 +44,49 @@
         </div>
     </nav>
     
-    <section id="service" class="service-bg bg-myGreen-100 mt-14 pb-10">
-        <div class=" px-5 mx-auto text-center max-w-[85rem] lg:max-w-[70rem] md:max-w-[58rem] sm:max-w-[40rem] xs:max-w-[18rem]">
-            <h2 class="text-4xl font-semibold text-center pt-10 pb-10">Our<span class="font-semibold animate-text">Teams</span> </h2>
-            <!--service Container-->
-            <div class="grid grid-cols-3 gap-5 mb-5 md:grid-cols-3 sm:grid-cols-2 xs:grid-cols-1">
-                <!--Services 1-->
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user1.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
+    <!--Events-->
+<section id="service" class="service-bg bg-myGreen-100 pt-15 pb-10">
+    <div class="px-5 mx-auto text-center max-w-[85rem] lg:max-w-[70rem] md:max-w-[58rem] sm:max-w-[40rem] xs:max-w-[18rem]">
+        <h2 class="text-4xl font-semibold text-center pt-10 pb-10 md:text-2xl sm:text-2xl xs:text-xl">Here are the <span class="font-semibold animate-text md:text-2xl">List of our Event</span> </h2>
+        <!--Events Container-->
+        <div class="grid grid-cols-3 gap-5 mb-5 md:grid-cols-2 md:gap-10 sm:grid-cols-2 sm:gap-5 xs:grid-cols-1 xs-gap-5">
+            <!--Event-->
+            <div class="rounded-lg bg-gray-200 ">
+                <div class="h-52 w-full">
+                <img src="img/blog-1-720x480.jpg" class="w-full h-full rounded-t-lg" alt="service" />
                 </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user2.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
+                <div class="h-12 w-30 text-lg front-bold pt-2">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Event Name</h5>
                 </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user3.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
+                <div class="flex justify-end mb-2 ml-4 pr-2">
+                <a href="#" class="font-medium sm:mt-5 sm:font-thin xs:mt-5 xs:font-thin  bg-green-400 text-white rounded-md px-3 py-1">Read more</a>
                 </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user1.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
+            </div>
+            <div class="rounded-lg bg-gray-200 ">
+                <div class="h-52 w-full">
+                <img src="img/blog-2-720x480.jpg" class="w-full h-full rounded-t-lg" alt="service" />
                 </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user2.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
+                <div class="h-12 w-30 text-lg front-bold pt-2">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Event Name</h5>
                 </div>
-                <div class="rounded-lg bg-gray-200">
-                    <div class="h-52 w-full">
-                    <img src="img/user3.jpg" class="w-full h-full rounded-t-lg" alt="team" />
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold pt-2">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Jhon Doe</h5>
-                    </div>
-                    <div class="h-12 w-30 text-lg front-bold">
-                    <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">CEO</h5>
-                    </div>
+                <div class="flex justify-end mb-2 ml-4 pr-2">
+                <a href="#" class="font-medium sm:mt-5 sm:font-thin xs:mt-5 xs:font-thin  bg-green-400 text-white rounded-md px-3 py-1">Read more</a>
+                </div>
+            </div>
+            <div class="rounded-lg bg-gray-200 ">
+                <div class="h-52 w-full">
+                <img src="img/blog-3-720x480.jpg" class="w-full h-full rounded-t-lg" alt="service" />
+                </div>
+                <div class="h-12 w-30 text-lg front-bold pt-2">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white sm:text-xl xs:text-base">Event Name</h5>
+                </div>  
+                <div class="flex justify-end mb-2 ml-4 pr-2">
+                <a href="#" class="font-medium sm:mt-5 sm:font-thin xs:mt-5 xs:font-thin  bg-green-400 text-white rounded-md px-3 py-1">Read more</a>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!--Footer-->
     <footer>
